--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,8 +77,9 @@ body {
 
 .container {
     width: 100%;
-    max-width: 420px;
-    margin: 20px auto;
+    max-width: 440px;
+    padding: 20px;
+    margin: 0 auto;
     font-weight: 100;
   }
 
