--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,6 +92,12 @@ body {
 .nav{
     border-top: 1px solid;
     margin-top: 10px;
+    padding-top: 5px;
+}
+
+.nowshowing{
+    border-bottom: 1px solid;
+    padding-bottom: 5px;
 }
 
 a, a:visited{
