--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,8 @@
 html {
     width: 100%;
     max-width: 100%;
+    min-height: 100%;
+    position: relative;
 } 
 
 body { 
@@ -152,4 +154,11 @@ svg:hover{
     bottom: 20px;
     text-align: center;
     font-size: 12px;
+}
+
+
+@media screen and (min-width:768px) {
+    body{
+        margin:20px 0 0;
+    }
 }
